--- a/Excel_Toolkit.html
+++ b/Excel_Toolkit.html
@@ -9,7 +9,12 @@
   </head>
 
   <body>
-    <div class="导航栏">
+    <!-- <div class="标题栏 pywebview-drag-region">
+    Excel Toolkit
+    <span class="窗口按钮" onclick="window.close()">✕</span> -->
+  </div>
+    <div class="导航栏"> 
+      <!--<div class="导航栏 pywebview-drag-region">  -->
       <div class="搜索栏">
         <input placeholder="输入要搜索的内容" /><button>搜索</button>
       </div>
