--- a/data/LAMBDA/LET.html
+++ b/data/LAMBDA/LET.html
@@ -1,6 +1,6 @@
 <h2>语法</h2>
 <p>
-  <strong>LET</strong>(名称1,表达式1[,名称2,表达式2,...],返回)
+  <strong>LET</strong>(名称1,表达式1[,名称2,表达式2,...],返回)<br />
   <strong>LET</strong>(name1,calculation1[,name2,calculation2,...],output)
 </p>
 <h3>参数</h3>
@@ -13,7 +13,7 @@
 </ol>
 <h2>概述</h2>
 <p>
-  LET 函数用于定义多个变量，并返回计算结果。<br />
+  定义多个变量，并返回计算结果。<br />
   可重复使用变量结果，避免重复计算。
 </p>
 <h3>常见错误</h3>
