--- a/data/LAMBDA/MAKEARRAY.html
+++ b/data/LAMBDA/MAKEARRAY.html
@@ -1,6 +1,6 @@
 <h2>语法</h2>
 <p>
-  <strong>MAKEARRAY</strong>(行数,列数,自定义函数(行号,列号,表达式) | 函数)
+  <strong>MAKEARRAY</strong>(行数,列数,自定义函数(行号,列号,表达式) | 函数)<br />
   <strong>MAKEARRAY</strong>(rows,cols,LAMBDA(row,col,calculation) | function)
 </p>
 <h3>参数</h3>
