--- a/data/LAMBDA/REDUCE.html
+++ b/data/LAMBDA/REDUCE.html
@@ -1,6 +1,7 @@
 <h2>语法</h2>
 <p>
-  <strong>REDUCE</strong>([初始值],数组,自定义函数(累加器,当前值,表达式) | 函数)
+  <strong>REDUCE</strong>([初始值],数组,自定义函数(累加器,当前值,表达式) |
+  函数)<br />
   <strong>REDUCE</strong>([initial_value],array,lambda(accumulator,value,body) |
   function)
 </p>
