--- a/data/LAMBDA/SCAN.html
+++ b/data/LAMBDA/SCAN.html
@@ -169,7 +169,21 @@
     </tr>
   </tbody>
 </table>
-<p>....</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>过程</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td></td>
+      <td>...</td>
+    </tr>
+  </tbody>
+</table>
 
 <table>
   <thead>
