--- a/data/LAMBDA/BYROW.html
+++ b/data/LAMBDA/BYROW.html
@@ -11,7 +11,7 @@
   <li>行 row：当前处理的行，名称可以自定义。</li>
 </ol>
 <h2>概述</h2>
-<p>BYROW 函数用于对数组中的每一行执行传入的函数。</p>
+<p>数组中的每一行执行传入的函数。</p>
 <h3>常见错误</h3>
 <ol>
   <li>传入的函数返回必须是一个值，不能是数组，否则因无法展开报错。</li>
