--- a/data/LAMBDA/LAMBDA.html
+++ b/data/LAMBDA/LAMBDA.html
@@ -1,16 +1,21 @@
 <h2>语法</h2>
-<p><strong>LAMBDA</strong>([参数1,参数2,...],表达式)<br>
-    <strong>LAMBDA</strong>([parameter1,parameter2,...],calculation)
+<p>
+  <strong>LAMBDA</strong>([参数1,参数2,...],表达式)<br />
+  <strong>LAMBDA</strong>([parameter1,parameter2,...],calculation)
 </p>
 <h3>参数</h3>
 <ol>
-    <li>参数 parameters：参数列表，参数用英文逗号隔开。<br>
-        接受数值、文本、日期、时间、布尔值、公式、引用、函数等任意数据类型。</li>
-    <li>表达式 calculation：计算公式。</li>
+  <li>
+    参数 parameters：参数列表，参数用英文逗号隔开。<br />
+    接受数值、文本、日期、时间、布尔值、公式、引用、函数等任意数据类型。
+  </li>
+  <li>表达式 calculation：计算公式。</li>
 </ol>
 <h2>概述</h2>
-<p>LAMBDA 函数用于创建一个函数，该函数可以接受参数并返回计算结果。<br>
-    主要应用场景是封装一个复杂的计算公式，方便后续重复使用。</p>
+<p>
+  创建一个函数，该函数可以接受参数并返回计算结果。<br />
+  主要应用场景是封装一个复杂的计算公式，方便后续重复使用。
+</p>
 <h2>示例</h2>
 <h3>示例1</h3>
 <pre><code class="language-excel code-highlight"><span class="code-line line-number" line="1">LAMBDA(x,SUM(SEQUENCE(x)))(10)
@@ -21,13 +26,13 @@
 </span></code></pre>
 <h3>示例2</h3>
 <pre><code class="language-excel code-highlight"><span class="code-line line-number" line="1">=LET(
-</span><span class="code-line line-number" line="2">    fxa,LAMBDA(x,y,x*y),
-</span><span class="code-line line-number" line="3">    fxb,LAMBDA(
-</span><span class="code-line line-number" line="4">        x,y,
-</span><span class="code-line line-number" line="5">        f_1,f_2,
-</span><span class="code-line line-number" line="6">        f_1(x,y)+f_2(x,y)
-</span><span class="code-line line-number" line="7">    ),
-</span><span class="code-line line-number" line="8">    fxb(2,3,fxa,SUM)
+</span><span class="code-line line-number" line="2">fxa,LAMBDA(x,y,x*y),
+</span><span class="code-line line-number" line="3">fxb,LAMBDA(
+</span><span class="code-line line-number" line="4">    x,y,
+</span><span class="code-line line-number" line="5">    f_1,f_2,
+</span><span class="code-line line-number" line="6">    f_1(x,y)+f_2(x,y)
+</span><span class="code-line line-number" line="7">),
+</span><span class="code-line line-number" line="8">fxb(2,3,fxa,SUM)
 </span><span class="code-line line-number" line="9">)
 </span><span class="code-line line-number" line="10">计算过程：
 </span><span class="code-line line-number" line="11">=fx2(2,3)
