--- a/data/LAMBDA/MAP.html
+++ b/data/LAMBDA/MAP.html
@@ -49,7 +49,7 @@
   </tbody>
 </table>
 <h3>示例 2</h3>
-<pre><code class="language-excel code-highlight"><span class="code-line line-number" line="1">MAP({1,2;3,4},{10,20,30,40},LAMBDA(x,y,x+y))
+<pre><code class="language-excel code-highlight"><span class="code-line line-number" line="1">MAP({1,2;3,4},{10,20;30,40},LAMBDA(x,y,x+y))
 </span></code></pre>
 
 <table>
