--- a/data/逻辑函数/IFERROR.html
+++ b/data/逻辑函数/IFERROR.html
@@ -1,6 +1,6 @@
 <h2>语法</h2>
 <p>
-  <strong>IFERROR</strong>(值,错误返回值)
+  <strong>IFERROR</strong>(值,错误返回值)<br />
   <strong>IFERROR</strong>(value,value_if_error)
 </p>
 <h3>参数</h3>
