--- a/data/逻辑函数/SWITCH.html
+++ b/data/逻辑函数/SWITCH.html
@@ -1,7 +1,7 @@
 <h2>语法</h2>
 <p>
   <strong>SWITCH</strong
-  >(匹配值,匹配项1,返回值1[,匹配项2,返回值2,...匹配项126,返回值126,默认值])
+  >(匹配值,匹配项1,返回值1[,匹配项2,返回值2,...匹配项126,返回值126,默认值])<br />
   <strong>SWITCH</strong
   >(expression,value1,result1[,value2,result2,...value126,result126,default])
 </p>
