--- a/data/逻辑函数/XOR.html
+++ b/data/逻辑函数/XOR.html
@@ -1,6 +1,6 @@
 <h2>语法</h2>
 <p>
-  <strong>XOR</strong>(布尔值1,[布尔值2...布尔值254])
+  <strong>XOR</strong>(布尔值1,[布尔值2...布尔值254])<br />
   <strong>XOR</strong>(logical1,[logical2...logical254])
 </p>
 <h3>参数</h3>
