--- a/data/逻辑函数/AND.html
+++ b/data/逻辑函数/AND.html
@@ -1,6 +1,6 @@
 <h2>语法</h2>
 <p>
-  <strong>AND</strong>(布尔值1[,布尔值2...布尔值255])
+  <strong>AND</strong>(布尔值1[,布尔值2...布尔值255])<br />
   <strong>AND</strong>(logical1[,logical2,...logical255])
 </p>
 <h3>参数</h3>
