--- a/data/逻辑函数/IFNA.html
+++ b/data/逻辑函数/IFNA.html
@@ -1,6 +1,6 @@
 <h2>语法</h2>
 <p>
-  <strong>IFNA</strong>(值,值不可用返回值)
+  <strong>IFNA</strong>(值,值不可用返回值)<br />
   <strong>IFNA</strong>(value,value_if_na)
 </p>
 <h3>参数</h3>
