--- a/data/逻辑函数/NOT.html
+++ b/data/逻辑函数/NOT.html
@@ -1,5 +1,8 @@
 <h2>语法</h2>
-<p><strong>NOT</strong>(逻辑值) <strong>NOT</strong>(logical)</p>
+<p>
+  <strong>NOT</strong>(逻辑值)<br />
+  <strong>NOT</strong>(logical)
+</p>
 <h3>参数</h3>
 <ol>
   <li>逻辑值 logical：TRUE 或 FALSE 或数值。</li>
