--- a/data/基础/运算符.html
+++ b/data/基础/运算符.html
@@ -139,7 +139,7 @@
     </tr>
     <tr>
       <td>空格</td>
-      <td>交叉</td>
+      <td>交集引用</td>
       <td>=SUM(A1:C5 B2:D6)</td>
       <td>两区域重叠部分</td>
     </tr>
@@ -152,7 +152,7 @@
     <tr>
       <td>#</td>
       <td>动态数组</td>
-      <td>#A1</td>
+      <td>A1#</td>
       <td>A1 的动态数组</td>
     </tr>
     <tr>
