--- a/data/基础/引用.html
+++ b/data/基础/引用.html
@@ -1,4 +1,5 @@
 <h2>示例数据</h2>
+
 <table>
   <thead>
     <tr>
@@ -41,191 +42,133 @@
   </tbody>
 </table>
 <h2>示例</h2>
+
 <table>
   <thead>
     <tr>
-      <th>说明</th>
-      <th>示例</th>
-      <th>结果</th>
+      <th></th>
+      <th>A</th>
+      <th>B</th>
+      <th>C</th>
+      <th>D</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>单元格</td>
-      <td>=B2</td>
-      <td>6</td>
-    </tr>
-  </tbody>
-</table>
-<table>
-  <thead>
-    <tr>
-      <th>说明</th>
-      <th>示例</th>
-      <th>结果</th>
-      <th>结果</th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>连续区域</td>
-      <td>=A1:A3</td>
-      <td>{1;5;9}</td>
       <td>1</td>
-      <td></td>
-      <td></td>
+      <td>=$A1</td>
+      <td>=$A1</td>
+      <td>=$A1</td>
+      <td>=$A1</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>5</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>9</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>连续区域</td>
-      <td>=A1:C1</td>
-      <td>{1,2,3}</td>
-      <td>1</td>
       <td>2</td>
+      <td>=$A2</td>
+      <td></td>
+      <td>→</td>
+      <td>→</td>
+    </tr>
+    <tr>
       <td>3</td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>=$A3</td>
+      <td>↓</td>
       <td></td>
       <td></td>
     </tr>
     <tr>
-      <td>连续区域</td>
-      <td>=A1:B2</td>
-      <td>{1,2;5,6}</td>
-      <td>1</td>
-      <td>2</td>
+      <td>4</td>
+      <td>=$A4</td>
+      <td>↓</td>
       <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>5</td>
-      <td>6</td>
       <td></td>
     </tr>
   </tbody>
 </table>
+
 <table>
   <thead>
     <tr>
-      <th>说明</th>
-      <th>示例</th>
-      <th>结果</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>整列</td>
-      <td>A:A</td>
-      <td>A 列整列</td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>整行</td>
-      <td>1:1</td>
-      <td>1 行整行</td>
-    </tr>
-  </tbody>
-</table>
-<table>
-  <thead>
-    <tr>
-      <th>说明</th>
-      <th>示例</th>
-      <th>结果</th>
-      <th>结果</th>
       <th></th>
+      <th>A</th>
+      <th>B</th>
+      <th>C</th>
+      <th>D</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>连续区域扩张</td>
-      <td>=A1:B1:B2</td>
-      <td>{1,2;5,6}</td>
       <td>1</td>
-      <td>2</td>
+      <td>=A$1</td>
+      <td>=B$1</td>
+      <td>=C$1</td>
+      <td>=D$1</td>
     </tr>
     <tr>
+      <td>2</td>
+      <td>=A$1</td>
+      <td></td>
+      <td>→</td>
+      <td>→</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>=A$1</td>
+      <td>↓</td>
       <td></td>
       <td></td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>=A$1</td>
+      <td>↓</td>
       <td></td>
-      <td>5</td>
-      <td>6</td>
+      <td></td>
     </tr>
   </tbody>
 </table>
+
 <table>
   <thead>
     <tr>
-      <th>说明</th>
-      <th>示例</th>
-      <th>结果</th>
-      <th>结果</th>
       <th></th>
+      <th>A</th>
+      <th>B</th>
+      <th>C</th>
+      <th>D</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>交集区域</td>
-      <td>=B1:B4 A1:D1</td>
+      <td>1</td>
+      <td>=$A$1</td>
+      <td>=$A$1</td>
+      <td>=$A$1</td>
+      <td>=$A$1</td>
+    </tr>
+    <tr>
       <td>2</td>
+      <td>=$A$1</td>
+      <td></td>
+      <td>→</td>
+      <td>→</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>=$A$1</td>
+      <td>↓</td>
       <td></td>
       <td></td>
     </tr>
     <tr>
+      <td>4</td>
+      <td>=$A$1</td>
+      <td>↓</td>
       <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>交集区域</td>
-      <td>=A1:B4 B3:C4</td>
-      <td>{6;10}</td>
-      <td>6</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>10</td>
       <td></td>
     </tr>
   </tbody>
 </table>
+<h3>表示方式：</h3>
+<p>在列标和行号前加 $，如 $A$1、$B$2。</p>
+<h3>特点：</h3>
+<p>无论公式复制到哪里，引用始终保持不变。</p>
