--- a/data/基础/绝对引用.html
+++ b/data/基础/绝对引用.html
@@ -1,3 +1,5 @@
+<h2>示例数据</h2>
+
 <table>
   <thead>
     <tr>
@@ -110,14 +112,14 @@
     </tr>
     <tr>
       <td>3</td>
-      <td>=A$2</td>
+      <td>=A$1</td>
       <td>↓</td>
       <td></td>
       <td></td>
     </tr>
     <tr>
       <td>4</td>
-      <td>=A$3</td>
+      <td>=A$1</td>
       <td>↓</td>
       <td></td>
       <td></td>
