--- a/Excel_Toolkit.html
+++ b/Excel_Toolkit.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="Excel_Toolkit.css" />
-    <link rel="icon" href="data:," />
-    <script src="Excel_Toolkit.js"></script>
-    <title>Excel Toolkit</title>
-  </head>
 
-  <body>
-    <!-- <div class="标题栏 pywebview-drag-region">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="Excel_Toolkit.css" />
+  <link rel="icon" href="data:," />
+  <script src="Excel_Toolkit.js"></script>
+  <title>Excel Toolkit</title>
+</head>
+
+<body>
+  <!-- <div class="标题栏 pywebview-drag-region">
     Excel Toolkit
     <span class="窗口按钮" onclick="window.close()">✕</span> -->
   </div>
-    <div class="导航栏"> 
-      <!--<div class="导航栏 pywebview-drag-region">  -->
-      <div class="搜索栏">
-        <input placeholder="输入要搜索的内容" /><button>搜索</button>
+  <div class="导航栏">
+    <!--<div class="导航栏 pywebview-drag-region">  -->
+    <div class="搜索栏">
+      <input id="searchInput" placeholder="输入要搜索的内容" />
+      <button id="searchButton" onclick="search()">搜索</button>
+    </div>
+    <div class="分类" id="分类">
+      <div class="一级列表" id="一级列表">
+        <div class="一级列表项 激活">基础</div>
+        <div class="一级列表项">文本函数</div>
       </div>
-      <div class="分类" id="分类">
-        <div class="一级列表" id="一级列表">
-          <div class="一级列表项 激活">基础</div>
-          <div class="一级列表项">文本函数</div>
-        </div>
 
-        <div class="二级列表" id="二级列表">
-          <div class="二级列表项 激活">
-            <div class="列表键">Character.FromNumber</div>
-            <div class="列表值">将数字转换为对应的Unicode字符</div>
-          </div>
-          <div class="二级列表项">
-            <div class="列表键">Character.ToNumber</div>
-            <div class="列表值">将字符转换为对应的Unicode数字</div>
-          </div>
+      <div class="二级列表" id="二级列表">
+        <div class="二级列表项 激活">
+          <div class="列表键">Character.FromNumber</div>
+          <div class="列表值">将数字转换为对应的Unicode字符</div>
+        </div>
+        <div class="二级列表项">
+          <div class="列表键">Character.ToNumber</div>
+          <div class="列表值">将字符转换为对应的Unicode数字</div>
         </div>
       </div>
     </div>
-    <div class="内容栏" id="内容栏">
+  </div>
+  <div class="内容栏" id="内容栏">
 
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
