--- a/Excel_Toolkit.html
+++ b/Excel_Toolkit.html
@@ -17,8 +17,8 @@
   <div class="导航栏">
     <!--<div class="导航栏 pywebview-drag-region">  -->
     <div class="搜索栏">
-      <input id="searchInput" placeholder="输入要搜索的内容" />
-      <button id="searchButton" onclick="search()">搜索</button>
+      <input id="searchInput" placeholder="输入要搜索的内容" onkeydown="if(event.key === 'Enter') layout.search()"/>
+      <button id="searchButton" onclick="layout.search()">搜索</button>
     </div>
     <div class="分类" id="分类">
       <div class="一级列表" id="一级列表">
